k8s/install/gitlab-rbac.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: gitlab
