k8s/install/monitor.yaml
# This is an example where https://monitor.$domain is hosted outside
#  kubernetes. Specify its IP address in env var MONITOR_EXT_IP.
---
apiVersion: v1
kind: Service
metadata:
  labels:
    kubernetes.io/service-name: $SERVICE_NAME
  name: $SERVICE_NAME
  namespace: $K8S_NAMESPACE
spec:
  ports:
  - { port: 80, targetPort: 80, name: monitor }
  type: ClusterIP
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: $SERVICE_NAME
  namespace: $K8S_NAMESPACE
  labels:
    kubernetes.io/service-name: $SERVICE_NAME
addressType: IPv4
endpoints:
  - addresses: [ $MONITOR_EXT_IP ]
ports:
  - name: monitor
    protocol: TCP
    port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: $SERVICE_NAME
  namespace: $K8S_NAMESPACE
spec:
  parentRefs:
  - kind: ListenerSet
    name: $SERVICE_NAME
    sectionName: https
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: $SERVICE_NAME
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: $SERVICE_NAME
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: $SERVICE_NAME-https-redirect
  namespace: $K8S_NAMESPACE
spec:
  parentRefs:
  - kind: ListenerSet
    name: $SERVICE_NAME
    sectionName: http
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 308
